WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259250
(REGRESSION
264248@main
) [IFC] ASSERT_NOT_REACHED in InlineFormattingGeometry::logicalTopForNextLine
https://bugs.webkit.org/show_bug.cgi?id=259250
Summary
(REGRESSION 264248@main) [IFC] ASSERT_NOT_REACHED in InlineFormattingGeometry...
alan
Reported
2023-07-15 16:26:50 PDT
when visiting
https://next.dk/beregn/nybil/1/indtast-nummerplade
Attachments
Test reduction
(448 bytes, text/html)
2023-07-15 19:32 PDT
,
alan
no flags
Details
Patch
(11.78 KB, patch)
2023-07-17 21:32 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.09 KB, patch)
2023-07-18 07:50 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Nguyen (:ntim)
Comment 1
2023-07-15 18:02:14 PDT
***
Bug 259251
has been marked as a duplicate of this bug. ***
alan
Comment 2
2023-07-15 19:32:22 PDT
Created
attachment 467054
[details]
Test reduction
Radar WebKit Bug Importer
Comment 3
2023-07-15 19:36:22 PDT
<
rdar://problem/112338580
>
alan
Comment 4
2023-07-15 19:40:03 PDT
Ahmad came across this at
https://stackoverflow.com/questions/76659792/angular-website-fails-on-ios-16-5-or-newer
alan
Comment 5
2023-07-15 19:46:42 PDT
..and while the crash was addressed by a speculative fix at
264579@main
now that there's a test case we could check if it needs some more work (assert indicates it does).
alan
Comment 6
2023-07-17 12:53:24 PDT
This looks to be an issue with intrusive float propagation to sibling (descendant) formatting contexts.
alan
Comment 7
2023-07-17 19:42:30 PDT
(In reply to zalan from
comment #6
)
> This looks to be an issue with intrusive float propagation to sibling > (descendant) formatting contexts.
scratch that. patch is coming up.
alan
Comment 8
2023-07-17 21:32:20 PDT
Created
attachment 467065
[details]
Patch
alan
Comment 9
2023-07-18 07:50:54 PDT
Created
attachment 467068
[details]
Patch
EWS
Comment 10
2023-07-19 05:48:37 PDT
Committed
266159@main
(7cac269045d9): <
https://commits.webkit.org/266159@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467068
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug